--- a/Sinhala_NER_1_Spacy.ipynb
+++ b/Sinhala_NER_1_Spacy.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1GusKiDrgFJBMgm0bAU0En0LkevsC_xY1",
-      "authorship_tag": "ABX9TyN1iyympbhgYDtue6RJU7fc",
+      "authorship_tag": "ABX9TyMETchQIGimEqpWx/uz5dss",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -364,21 +364,23 @@
       "cell_type": "code",
       "source": [
         "doc = nlp_ner(\"කර්ණාටක ප්‍රාන්තයේ අනපේක්ෂිත මැතිවරණ ප්‍රතිපලයෙන් පසු ඉන්දීය ජාතික කොන්ග්‍රසය නැවතත් ජයග්‍රාහි මාවතකට අවතීර්ණ වෙමින් සිටිනවා.\")\n",
+        "doc2 = nlp_ner(\"පසුගිය සතියේ නිමාවට පත් වුණු ශ්‍රී ලංකා-අයර්ලන්ත දෙවන ටෙස්ට් තරගයේ දී වාර්තා කිහිපයක් අලුත් වුණා. ඒ අතුරින් කාගේත් අවධානය දිනා ගත්තේ ප්‍රභාත් ජයසූරිය බිහි කළ ලෝක වාර්තාව යි. එහි දී ඔහු අඩුම ටෙස්ට් තරග ප්‍රමාණයකින් කඩුලු 50 කඩඉම වෙත පැමිණි දඟපන්දු යවන්නා ලෙස වාර්තා අතරට එකතු වුණා.\")\n",
         "\n",
         "colors = {\"LOCATION\": \"#F67DE3\", \"PERSON\": \"#7DF609\", \"ORGANIZATION\": \"#A6E22D\", \"DATE\": \"#FFFF00\", \"TIME\": \"#800000\"}\n",
         "options = {\"colors\": colors}\n",
         "\n",
-        "spacy.displacy.render(doc, style=\"ent\", options= options, jupyter=True)"
+        "spacy.displacy.render(doc, style=\"ent\", options= options, jupyter=True)\n",
+        "spacy.displacy.render(doc2, style=\"ent\", options= options, jupyter=True)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 52
+          "height": 157
         },
         "id": "4UshwVfvFmh0",
-        "outputId": "011db65d-a3be-44bf-8c51-6852518c6aa7"
+        "outputId": "eeb2fa28-92a8-4f74-e622-450544e7f62a"
       },
-      "execution_count": 38,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "display_data",
@@ -393,6 +395,33 @@
               "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">LOCATION</span>\n",
               "</mark>\n",
               " ජාතික කොන්ග්‍රසය නැවතත් ජයග්‍රාහි මාවතකට අවතීර්ණ වෙමින් සිටිනවා.</div></span>"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<span class=\"tex2jax_ignore\"><div class=\"entities\" style=\"line-height: 2.5; direction: ltr\">\n",
+              "<mark class=\"entity\" style=\"background: #FFFF00; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+              "    පසුගිය සතියේ\n",
+              "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">DATE</span>\n",
+              "</mark>\n",
+              " නිමාවට පත් වුණු \n",
+              "<mark class=\"entity\" style=\"background: #F67DE3; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+              "    ශ්‍රී ලංකා\n",
+              "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">LOCATION</span>\n",
+              "</mark>\n",
+              "-අයර්ලන්ත දෙවන \n",
+              "<mark class=\"entity\" style=\"background: #F67DE3; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+              "    ටෙස්ට් තරගයේ දී\n",
+              "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">LOCATION</span>\n",
+              "</mark>\n",
+              " වාර්තා කිහිපයක් අලුත් වුණා. ඒ අතුරින් කාගේත් අවධානය දිනා ගත්තේ ප්‍රභාත් ජයසූරිය බිහි කළ ලෝක වාර්තාව යි. එහි දී ඔහු අඩුම ටෙස්ට් තරග ප්‍රමාණයකින් කඩුලු 50 කඩඉම වෙත පැමිණි දඟපන්දු යවන්නා ලෙස වාර්තා අතරට එකතු වුණා.</div></span>"
             ]
           },
           "metadata": {}
